# mobile_tests_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_browserstack_sample_selene.py  test_wikipedia.py
utils/: attach.py
